# Netology-Diplom-3

./: BadFileEx.cpp  BadFileEx.h  BadIniEx.cpp  BadIniEx.h  CMakeLists.txt  Parser.cpp  Parser.h  main.cpp
